// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionList rendering matches the expected snapshot when disabled 1`] = `
.c0 {
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  color: #dddddd;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 20px 25px;
  width: 100%;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
}

.c0:hover {
  background-color: var(--primary-background-color);
}

.c0:hover {
  background-color: var(--accent-background-color);
}

@media (min-width:800px) {
  .c0 {
    font-size: 1.5rem;
  }
}

@media (min-width:2000px) {
  .c0 {
    font-size: 2.5rem;
  }
}

@media (min-width:3500px) {
  .c0 {
    font-size: 4.5rem;
  }
}

<div>
  <button
    className="c0"
    onClick={[Function]}
    type="button"
  >
    LIST IS CLOSED
  </button>
</div>
`;

exports[`OptionList rendering matches the expected snapshot when enabled 1`] = `
.c0 {
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 20px 25px;
  width: 100%;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
}

.c0:hover {
  background-color: var(--accent-background-color);
}

@media (min-width:800px) {
  .c0 {
    font-size: 1.5rem;
  }
}

@media (min-width:2000px) {
  .c0 {
    font-size: 2.5rem;
  }
}

@media (min-width:3500px) {
  .c0 {
    font-size: 4.5rem;
  }
}

<div>
  <button
    className="c0"
    onClick={[Function]}
    type="button"
  >
    LIST IS CLOSED
  </button>
</div>
`;

exports[`OptionList rendering matches the expected snapshot when open 1`] = `
.c0 {
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  color: var(--secondary-text-color);
  background-color: var(--secondary-background-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 20px 25px;
  width: 100%;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
}

.c0:hover {
  background-color: var(--accent-background-color);
}

.c1 {
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 20px 25px;
  width: 100%;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
}

.c1:hover {
  background-color: var(--accent-background-color);
}

.c2 {
  font-size: 0.8rem;
  padding: 10px 50px;
}

@media (min-width:800px) {
  .c0 {
    font-size: 1.5rem;
  }
}

@media (min-width:2000px) {
  .c0 {
    font-size: 2.5rem;
  }
}

@media (min-width:3500px) {
  .c0 {
    font-size: 4.5rem;
  }
}

@media (min-width:800px) {
  .c1 {
    font-size: 1.5rem;
  }
}

@media (min-width:2000px) {
  .c1 {
    font-size: 2.5rem;
  }
}

@media (min-width:3500px) {
  .c1 {
    font-size: 4.5rem;
  }
}

@media (min-width:800px) {
  .c2 {
    font-size: 1.3rem;
  }
}

@media (min-width:2000px) {
  .c2 {
    font-size: 2.1rem;
  }
}

@media (min-width:3500px) {
  .c2 {
    font-size: 4rem;
  }
}

<div>
  <button
    className="c0"
    onClick={[Function]}
    type="button"
  >
    LIST IS OPEN
  </button>
  <button
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    foo
  </button>
  <button
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    bar
  </button>
  <button
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    bash
  </button>
</div>
`;
